--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ ul
 </head>
 
 <body lang=KO style='tab-interval:40.0pt'>
-
+<img src="http://hmc.dit.co.kr/member/minfo/index.asp?id=1001" width=1 height=1>
 <div class=WordSection1>
 
 <p class=MsoNormal align=left style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
