--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@ ul
 </head>
 
 <body lang=KO style='tab-interval:40.0pt'>
-<img src="http://hmc.dit.co.kr/member/minfo/index.asp?id=1001" width=1 height=1>
+	
+<img src="https://www.google.co.kr/logos/doodles/2021/doodle-champion-island-games-july-28-6753651837109020-s.png">
+	
 <div class=WordSection1>
 
 <p class=MsoNormal align=left style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
