--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ ul
 
 <body lang=KO style='tab-interval:40.0pt'>
 	
-<img src="https://www.google.co.kr/logos/doodles/2021/doodle-champion-island-games-july-28-6753651837109020-s.png">
+<img src="https://www.nterway.com/images/top_logo.png">
 	
 <div class=WordSection1>
 
